--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">InstagramClone</string>
+    <string name="signup">Don\'t have an account ? <b> Sign up</b></string>
+    <string name="login">Have an account ? <b> Log in</b></string>
+    <string name="email">Email</string>
+    <string name="instagram">Instagram</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="sign_up">Sign up</string>
+    <string name="email_or_username">Email or Username</string>
 </resources>
